package com.morris.pattern.iterator.impl;

public interface Iterator<T> {

    T next();

    boolean hasNext();

    T remove();

}
